--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-  <title>someting</title>
+  <title>momentum</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
+<div class="main">
   <div class="js-clock">
     <h1>00:00</h1>
   </div>
@@ -25,10 +26,16 @@
 
   <ul class="js-toDoList">
   </ul>
+  <spanc class="js-weather"></spanc>
+</div>
+
+
 
   <script src="gretting.js"></script>
   <script src="clock.js"></script>
   <script src="todo.js"></script>
+  <script src="bg.js"></script>
+  <script src="weather.js"></script>
 </body>
 
 </html>
